<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.home.SearchActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView4"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_profile"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="135dp">

        <ImageButton
            android:id="@+id/btn_back_home"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_hover"
            android:src="@drawable/chevron_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_arrival"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/arrivalname"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/travelcity"
            app:layout_constraintBottom_toBottomOf="@+id/img_arrowh"
            app:layout_constraintEnd_toStartOf="@+id/img_arrowh"
            app:layout_constraintTop_toTopOf="@id/img_arrowh"
            tools:ignore="RtlCompat" />

        <ImageButton
            android:id="@+id/img_arrowh"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/btn_filterdate"
            android:layout_toEndOf="@+id/btn_back_home"
            android:background="@android:color/transparent"
            android:src="@drawable/arrows_h"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_departure"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/departurename"
            android:textAlignment="viewStart"
            android:textAppearance="@style/travelcity"
            app:layout_constraintBottom_toBottomOf="@+id/img_arrowh"
            app:layout_constraintStart_toEndOf="@+id/img_arrowh"
            app:layout_constraintTop_toTopOf="@+id/img_arrowh" />


        <TextView
            android:id="@+id/txt_date"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="1sp"
            android:text="@string/txt_date"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/txt_details"
            app:layout_constraintBottom_toBottomOf="@id/txt_seat"
            app:layout_constraintEnd_toStartOf="@id/view_ellipse"
            app:layout_constraintTop_toTopOf="@id/txt_seat" />

        <ImageView
            android:id="@+id/view_ellipse"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ellipse"
            app:layout_constraintBottom_toBottomOf="@id/txt_seat"
            app:layout_constraintEnd_toStartOf="@id/txt_seat"
            app:layout_constraintTop_toTopOf="@id/txt_seat" />

        <TextView
            android:id="@+id/txt_seat"
            android:layout_width="55dp"
            android:layout_height="16dp"
            android:gravity="center_vertical|center_horizontal"
            android:lineSpacingExtra="1sp"
            android:text="@string/txt_seat"
            android:textAppearance="@style/txt_details"
            app:layout_constraintEnd_toEndOf="@+id/img_arrowh"
            app:layout_constraintStart_toStartOf="@+id/img_arrowh"
            app:layout_constraintTop_toBottomOf="@+id/img_arrowh" />

        <ImageView
            android:id="@+id/view_ellipse1"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ellipse"
            app:layout_constraintBottom_toBottomOf="@id/txt_date"
            app:layout_constraintStart_toEndOf="@+id/txt_seat"
            app:layout_constraintTop_toTopOf="@id/txt_date"
            tools:layout_editor_absoluteY="120dp" />

        <TextView
            android:id="@+id/txt_seat_class"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:lineSpacingExtra="1sp"
            android:text="@string/txt_seat_class"
            android:textAppearance="@style/txt_details"
            app:layout_constraintBottom_toBottomOf="@id/txt_date"
            app:layout_constraintStart_toEndOf="@id/view_ellipse1"
            app:layout_constraintTop_toTopOf="@id/txt_date" />

        <ImageButton
            android:id="@+id/btn_filterdate"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_hover"
            android:src="@drawable/calendar_alt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toEndOf="@+id/img_arrowh"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dashed_line"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/dashed_line"
            app:layout_constraintEnd_toEndOf="@+id/btn_filterdate"
            app:layout_constraintStart_toStartOf="@+id/btn_back_home"
            app:layout_constraintTop_toTopOf="@id/txt_seat" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_filterdate"
            app:layout_constraintStart_toStartOf="@+id/btn_back_home"
            app:layout_constraintTop_toTopOf="@id/dashed_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_filterdate"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/btn_back_home"
            app:layout_constraintTop_toBottomOf="@+id/rv_list_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>